Optimisation tableau 1D et struct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required(VERSION 4.2)
 
 project(CandyCrush LANGUAGES CXX)
 
+set(CMAKE_CXX_STANDARD 20)
+
 add_executable(CandyCrush src/main.cpp)
