--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,11 @@ project(CandyCrush LANGUAGES CXX)
 find_package(Curses REQUIRED)
 
 add_executable(candycrush_term
-  src/main.cc
-  src/term.cc
-  inc/term.hh)
+  src/term/main.cc
+  src/term/term.cc)
 
 target_include_directories(candycrush_term PRIVATE ${CURSES_INCLUDE_DIR})
-target_include_directories(candycrush_term PUBLIC inc)
+target_include_directories(candycrush_term PUBLIC inc/term)
 
 target_link_libraries(candycrush_term ${CURSES_LIBRARIES})
 
