--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(CandyCrush LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(CandyCrush src/main.cpp)
+add_executable(CandyCrush src/main.cpp src/Matrix/matrix.cpp src/Casali/casali.cpp)
