--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,10 @@ cmake_minimum_required(VERSION 4.2)
 project(CandyCrush LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
 
-add_executable(CandyCrush src/main.cpp src/Matrix/matrix.cpp src/Casali/casali.cpp)
+add_executable(CandyCrush src/main.cpp)
+
+add_subdirectory(src/Matrix)
+target_link_libraries(CandyCrush PRIVATE Matrix)
