feat: gestion de couleurs (draft)
sera enleve

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 
 project(CandyCrush LANGUAGES CXX)
 
+option(USE_LIBTERM "Indique si le jeu utilise la backend Term" OFF)
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
@@ -12,4 +14,9 @@ add_executable(CandyCrush src/main.cpp)
 add_subdirectory(src/Matrix)
 add_subdirectory(src/Term)
 
-target_link_libraries(CandyCrush PRIVATE Matrix Term)
+target_link_libraries(CandyCrush PRIVATE Matrix)
+
+if(USE_LIBTERM)
+  add_definitions(-DUSE_LIBTERM)
+  target_link_libraries(CandyCrush PRIVATE Term)
+endif()
